--- a/frontend/src/Game.css
+++ b/frontend/src/Game.css
@@ -10,3 +10,14 @@
     width: 70%;
     max-width: 60vh;
 }
+
+.game-message {
+    font-size: 2em;
+}
+
+@media only screen and (max-width: 480px) {
+    .game-message {
+        font-size: 1.17em;
+        font-weight: bold;
+    }
+}
